--- a/client/wxapp/app.json
+++ b/client/wxapp/app.json
@@ -2,7 +2,10 @@
   "pages": [
     "pages/index/index",
     "pages/receiveAddress/receiveAddress",
-    "pages/orderSettle/orderSettle"
+    "pages/addAddress/addAddress",
+    "pages/addressList/addressList",
+    "pages/orderSettle/orderSettle",
+    "pages/orderSettleDetail/orderSettleDetail"
   ],
   "window": {
     "navigationStyle": "default",
