--- a/client/wxapp/project.config.json
+++ b/client/wxapp/project.config.json
@@ -27,11 +27,11 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": false,
+		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.12.0",
+	"libVersion": "2.12.1",
 	"appid": "wx9101e853edfaaab0",
 	"projectname": "%E8%B1%86%E8%85%90%E5%85%88%E7%94%9F%E5%B0%8F%E7%A8%8B%E5%BA%8F2.0",
 	"debugOptions": {
@@ -65,36 +65,15 @@
 			"list": [
 				{
 					"id": -1,
-					"name": "用户有试饮券",
-					"pathName": "pages/index/index",
-					"query": "prize=test",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "web",
-					"pathName": "pages/web/web",
+					"name": "添加地址",
+					"pathName": "pages/addAddress/addAddress",
 					"query": "",
 					"scene": null
 				},
 				{
 					"id": -1,
-					"name": "二维码",
-					"pathName": "pages/code/code",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": 3,
-					"name": "模拟跳页面",
-					"pathName": "pages/index/index",
-					"query": "currentPageIndex=1",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "限定礼遇列表",
-					"pathName": "pages/giftDetail/giftDetail",
+					"name": "地址列表",
+					"pathName": "pages/receiveAddress/receiveAddress",
 					"query": "",
 					"scene": null
 				}
