提交:添加店铺模拟地址

--- a/client/wxapp/app.json
+++ b/client/wxapp/app.json
@@ -5,7 +5,8 @@
     "pages/addAddress/addAddress",
     "pages/addressList/addressList",
     "pages/orderSettle/orderSettle",
-    "pages/orderSettleDetail/orderSettleDetail"
+    "pages/orderSettleDetail/orderSettleDetail",
+    "pages/shops/shops"
   ],
   "window": {
     "navigationStyle": "default",
