--- a/client/wxapp/project.config.json
+++ b/client/wxapp/project.config.json
@@ -27,7 +27,7 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": false,
+		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -75,6 +75,12 @@
 					"name": "地址列表",
 					"pathName": "pages/receiveAddress/receiveAddress",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "选择门店",
+					"pathName": "pages/shops/shops",
 					"scene": null
 				}
 			]
