提交:接口全部调取完成,接下来串整个逻辑

--- a/client/wxapp/app.json
+++ b/client/wxapp/app.json
@@ -12,7 +12,7 @@
     "navigationStyle": "default",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "JOYEAT 嘬一口",
+    "navigationBarTitleText": "豆腐先生",
     "navigationBarTextStyle": "black"
   },
   "usingComponents": {
